tests/baselines/reference/inheritanceStaticAccessorOverridingMethod.errors.txt
tests/cases/compiler/inheritanceStaticAccessorOverridingMethod.ts(7,7): error TS2417: Class static side 'typeof b' incorrectly extends base class static side 'typeof a'.
  Types of property 'x' are incompatible.
    Type 'string' is not assignable to type '() => string'.
tests/cases/compiler/inheritanceStaticAccessorOverridingMethod.ts(8,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceStaticAccessorOverridingMethod.ts(11,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/inheritanceStaticAccessorOverridingMethod.ts (3 errors) ====
    class a {
        static x() {
            return "20";
        }
    }
    
    class b extends a {
          ~
!!! error TS2417: Class static side 'typeof b' incorrectly extends base class static side 'typeof a'.
!!! error TS2417:   Types of property 'x' are incompatible.
!!! error TS2417:     Type 'string' is not assignable to type '() => string'.
        static get x() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return "20";
        }
        static set x(aValue: string) {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        }
    }